*SVN*

* Update to script.aculo.us 1.6.3 [Thomas Fuchs]

* Update to Prototype 1.5.0_rc1 [sam]

* Added access to nested attributes in RJS #4548 [richcollins@gmail.com]. Examples:

    page['foo']['style']                  # => $('foo').style;
    page['foo']['style']['color']         # => $('blank_slate').style.color;
    page['foo']['style']['color'] = 'red' # => $('blank_slate').style.color = 'red';
    page['foo']['style'].color = 'red'    # => $('blank_slate').style.color = 'red';

* Fixed that AssetTagHelper#image_tag and others using compute_public_path should not modify the incoming source argument (closes #5102) [eule@space.ch]

* Deprecated the auto-appending of .png to AssetTagHelper#image_tag calls that doesn't have an extension [DHH] 

* Added locals hash to partials, which makes for convenient access of some times available/some times not variables #5491 [wbruce@gmail.com]. Example:

    # two different render calls
    render :partial => "person", :locals => { :include_overview => true }
    render :partial => "person"
    
    # view
    <% if locals[:include_overview] %>
      Show overview
    <% end %>

* Fixed FormOptionsHelper#select to respect :selected value #5813

* Fixed TextHelper#simple_format to deal with multiple single returns within a single paragraph #5835 [moriq@moriq.com]

* Fixed TextHelper#pluralize to handle 1 as a string #5909 [rails@bencurtis.com]

* Improved resolution of DateHelper#distance_of_time_in_words for better precision #5994 [Bob Silva]

* Changed that uncaught exceptions raised any where in the application will cause RAILS_ROOT/public/500.html to be read and shown instead of just the static "Application error (Rails)" [DHH]

* Integration tests: thoroughly test ActionController::Integration::Session.  #6022 [Kevin Clark]
    (tests skipped unless you `gem install mocha`)

* Added deprecation language for pagination which will become a plugin by Rails 2.0 [DHH]
