@@ -38,6 +38,12 @@ class JavaScriptHelperTest < Test::Unit::TestCase
     assert_dom_equal %(<a href="#" onclick="Element.update(&quot;header&quot;, &quot;&lt;h1&gt;Greetings&lt;/h1&gt;&quot;);; return false;">Greet me!</a>), html
   end
 
+  def test_link_to_function_with_rjs_block_and_options
+    html = link_to_function( "Greet me!", :class => "updater" ) do |page|
+      page.replace_html 'header', "<h1>Greetings</h1>"
+    end
+    assert_dom_equal %(<a href="#" class="updater" onclick="Element.update(&quot;header&quot;, &quot;&lt;h1&gt;Greetings&lt;/h1&gt;&quot;);; return false;">Greet me!</a>), html
+  end
 
   def test_button_to_function
     assert_dom_equal %(<input type="button" onclick="alert('Hello world!');" value="Greeting" />), 
@@ -49,5 +55,12 @@ class JavaScriptHelperTest < Test::Unit::TestCase
       page.replace_html 'header', "<h1>Greetings</h1>"
     end
     assert_dom_equal %(<input type="button" onclick="Element.update(&quot;header&quot;, &quot;&lt;h1&gt;Greetings&lt;/h1&gt;&quot;);;" value="Greet me!" />), html
+  end
+
+  def test_button_to_function_with_rjs_block_and_options
+    html = button_to_function( "Greet me!", :class => "greeter" ) do |page|
+      page.replace_html 'header', "<h1>Greetings</h1>"
+    end
+    assert_dom_equal %(<input type="button" class="greeter" onclick="Element.update(&quot;header&quot;, &quot;&lt;h1&gt;Greetings&lt;/h1&gt;&quot;);;" value="Greet me!" />), html
   end
 end
